--- a/Progetto/front-end/package.json
+++ b/Progetto/front-end/package.json
@@ -13,13 +13,15 @@
     "next": "14.0.3",
     "react": "^18",
     "react-dom": "^18",
-    "react-table": "^7.8.0"
+    "react-table": "^7.8.0",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@types/react-table": "^7.7.18",
+    "@types/uuid": "^9.0.7",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
     "eslint-config-next": "14.0.3",
